--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,22 @@ h1 {
     margin-top: 20px;
 }
 
+#high-score {
+    font-size: 20px;
+    margin: 10px 0;
+}
+
 #game-board {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
     margin-top: 20px;
+}
+
+.column {
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: flex-start;
+    max-width: 45%; 
 }
 
 .card {
@@ -42,4 +53,11 @@ h1 {
     background-color: #9E9E9E;
     cursor: default;
     transform: rotateY(180deg);
+}
+
+
+@media (max-width: 600px) {
+    .column {
+        max-width: 100%; 
+    }
 }
